--- a/css/main.css
+++ b/css/main.css
@@ -144,9 +144,17 @@ body {
 
 #header h1 {
     font-size: 18pt;
-    font-family: "Consolas";
+    font-family: "Consolas", "Lucida Console", "Courier New", monospace;
     font-weight: 900;
     color: white;
+}
+
+#header img {
+    /**
+    box-shadow: 10px 10px 5px #fff;
+    -webkit-box-shadow: 10px 10px 5px #fff;
+    -moz-box-shadow: 3px 3px 1px #fff;**/
+
 }
 
 .bg {
@@ -156,7 +164,7 @@ body {
     height: 100%;
     width: 100%;
     display: none;
-    background-image: url("../img/bg2.png");
+    background-image: url("../img/bg3.png");
     background-repeat: no-repeat;
     background-size: cover;
     /*filter: blur(10px);
