--- a/css/main.css
+++ b/css/main.css
@@ -100,17 +100,39 @@ body {
     width: 100%;
 }
 
-#pillars {
+/* PIxEL brand coloring */
+
+.red {
+    background-color: #FF7E79
+}
+
+.lightblue {
+    background-color: #00F3FF
+}
+
+.blue {
+    background-color: #75CBFE
+}
+
+.pink {
+    background-color: #FE89D7
+}
+
+.yellow {
+    background-color: #ECFF45
+}
+
+#intro-row-container {
     height: 900px;
 }
 
-.pillar-row {
+.intro-row {
     height: 20%; 
     margin-top: 10px;
     opacity: 0.000000000001;
 }
 
-.tagline {
+.intro-row h1, .expand-row h1 {
     display: block;
     margin: 0;
     position: relative;
@@ -121,7 +143,6 @@ body {
     font-size: 42pt;
     font-weight: 600;
     text-shadow: 0px 0px 20px rgba(0, 0, 0, .3);
-
 }
 
 .main {
@@ -149,12 +170,17 @@ body {
     color: white;
 }
 
+#header h2 {
+    
+}
+
 #header img {
     /**
     box-shadow: 10px 10px 5px #fff;
     -webkit-box-shadow: 10px 10px 5px #fff;
-    -moz-box-shadow: 3px 3px 1px #fff;**/
-
+    -moz-box-shadow: 3px 3px 1px #fff;
+    **/
+    width: 400px;
 }
 
 .bg {
@@ -175,6 +201,7 @@ body {
 }
 
 .expand-row {
+    height: 0px;
     width: 100%;
 }
 
