Groundwork for main content

--- a/css/main.css
+++ b/css/main.css
@@ -103,23 +103,28 @@ body {
 /* PIxEL brand coloring */
 
 .red {
-    background-color: #FF7E79
+    background-color: #FF7E79;
+    color: rgba(255,126,121, 0.75);
 }
 
 .lightblue {
-    background-color: #00F3FF
+    background-color: #00F3FF;
+    color: rgba(0, 243, 255, 0.9);
 }
 
 .blue {
-    background-color: #75CBFE
+    background-color: #75CBFE;
+    color: rgba(117, 203, 254, 0.8);
 }
 
 .pink {
-    background-color: #FE89D7
+    background-color: #FE89D7;
+    color: rgba(254, 137, 215, 0.75);
 }
 
 .yellow {
-    background-color: #ECFF45
+    background-color: #ECFF45;
+    color: rgba(236, 255, 69, 0.9);
 }
 
 #intro-row-container {
@@ -132,7 +137,7 @@ body {
     opacity: 0.000000000001;
 }
 
-.intro-row h1, .expand-row h1 {
+.intro-row h1 {
     display: block;
     margin: 0;
     position: relative;
@@ -143,6 +148,13 @@ body {
     font-size: 42pt;
     font-weight: 600;
     text-shadow: 0px 0px 20px rgba(0, 0, 0, .3);
+}
+
+.expand-row h1 {
+    font-size: 96pt;
+    font-weight: 600;
+    text-align: left;
+    text-shadow: 1px 4px 6px #f0f0f0, 0 0 0 #000, 1px 4px 6px #f0f0f0;
 }
 
 .main {
@@ -180,7 +192,7 @@ body {
     -webkit-box-shadow: 10px 10px 5px #fff;
     -moz-box-shadow: 3px 3px 1px #fff;
     **/
-    width: 400px;
+    width: 35%;
 }
 
 .bg {
@@ -203,6 +215,7 @@ body {
 .expand-row {
     height: 0px;
     width: 100%;
+    background-color: #F0F0F0;
 }
 
 /* ==========================================================================
